[gd_scene load_steps=108 format=3 uid="uid://uiuovrv2jeud"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_spune"]
[ext_resource type="Texture2D" uid="uid://cjy71jbvm5o5c" path="res://assets/sprites/player/player_attack1.png" id="2_pdbal"]
[ext_resource type="Texture2D" uid="uid://cc0cl24ubywtb" path="res://assets/sprites/player/player_attack2.png" id="3_35vxv"]
[ext_resource type="Texture2D" uid="uid://dgo7nj16hbdwu" path="res://assets/sprites/player/bat.png" id="4_poivh"]
[ext_resource type="Texture2D" uid="uid://ds0i8v75frjod" path="res://assets/sprites/player/player_death.png" id="5_l5gh2"]
[ext_resource type="Texture2D" uid="uid://dpy8caefpipsd" path="res://assets/sprites/player/cat.png" id="5_oiipj"]
[ext_resource type="Texture2D" uid="uid://dfufgkdbdv8dy" path="res://assets/sprites/player/player_jump.png" id="6_sy425"]
[ext_resource type="Texture2D" uid="uid://cw7drx80ejcop" path="res://assets/sprites/player/player_fall.png" id="7_ssvyy"]
[ext_resource type="Texture2D" uid="uid://dd6738360fs23" path="res://assets/sprites/player/player_idle.png" id="8_k7ain"]
[ext_resource type="Texture2D" uid="uid://b74vxfgetrv14" path="res://assets/sprites/player/player_hit.png" id="8_mgegm"]
[ext_resource type="Texture2D" uid="uid://bwy68incy5gav" path="res://assets/sprites/player/player_run.png" id="9_x1bnw"]
[ext_resource type="Script" path="res://entities/player/state_machine/idle.gd" id="11_7bvq5"]
[ext_resource type="Script" path="res://entities/tools/hurtbox.gd" id="11_irdsx"]
[ext_resource type="Script" path="res://entities/tools/hitbox.gd" id="12_1wwyk"]
[ext_resource type="Script" path="res://entities/player/state_machine/run.gd" id="12_av1hs"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_state_machine.gd" id="12_m10jh"]
[ext_resource type="AnimationLibrary" uid="uid://cnrmytbtaho83" path="res://assets/animations/player.res" id="13_0r7r0"]
[ext_resource type="Script" path="res://entities/player/state_machine/jump.gd" id="13_644fc"]
[ext_resource type="Script" path="res://entities/player/state_machine/double_jump.gd" id="14_3yvtw"]
[ext_resource type="Script" path="res://entities/player/state_machine/fall.gd" id="15_7d756"]
[ext_resource type="Script" path="res://entities/player/state_machine/final_fall.gd" id="16_vo0hw"]
[ext_resource type="Script" path="res://entities/player/state_machine/attack1.gd" id="17_x42d2"]
[ext_resource type="Script" path="res://entities/player/state_machine/attack2.gd" id="18_eich7"]
[ext_resource type="Theme" uid="uid://brlh53bypvlrb" path="res://assets/gui/themes/default.tres" id="19_7otby"]
[ext_resource type="Script" path="res://entities/player/state_machine/bat_form.gd" id="19_gv58d"]
[ext_resource type="PackedScene" uid="uid://roe360txy361" path="res://entities/player/inventory/inventory.tscn" id="20_uirxe"]
[ext_resource type="Script" path="res://entities/player/hud/fps.gd" id="21_mk2i7"]
[ext_resource type="Script" path="res://entities/player/state_machine/death.gd" id="22_48krb"]
[ext_resource type="Script" path="res://entities/player/hud/health_bar.gd" id="22_2246v"]
[ext_resource type="Script" path="res://entities/player/state_machine/hurt.gd" id="23_gesux"]
[ext_resource type="Script" path="res://entities/player/hud/mana_bar.gd" id="23_th253"]
[ext_resource type="Script" path="res://entities/player/state_machine/cat_idle.gd" id="28_3b24y"]
[ext_resource type="Script" path="res://entities/player/state_machine/cat_walk.gd" id="29_y8xmx"]
[ext_resource type="Script" path="res://entities/player/state_machine/cat_jump.gd" id="30_mx1dt"]
[ext_resource type="Script" path="res://entities/player/state_machine/cat_fall.gd" id="31_3t60f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbpmu"]
atlas = ExtResource("2_pdbal")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uag31"]
atlas = ExtResource("2_pdbal")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1ktv"]
atlas = ExtResource("2_pdbal")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4fts"]
atlas = ExtResource("2_pdbal")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogh1o"]
atlas = ExtResource("2_pdbal")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv7p6"]
atlas = ExtResource("2_pdbal")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwt37"]
atlas = ExtResource("3_35vxv")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u7ed"]
atlas = ExtResource("3_35vxv")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_737iq"]
atlas = ExtResource("3_35vxv")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x378j"]
atlas = ExtResource("3_35vxv")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0idup"]
atlas = ExtResource("3_35vxv")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgmur"]
atlas = ExtResource("3_35vxv")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dexmq"]
atlas = ExtResource("4_poivh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5trbe"]
atlas = ExtResource("4_poivh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_028h3"]
atlas = ExtResource("5_oiipj")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy0qt"]
atlas = ExtResource("5_oiipj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5we"]
atlas = ExtResource("5_oiipj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awo54"]
atlas = ExtResource("5_oiipj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqenh"]
atlas = ExtResource("5_oiipj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esyku"]
atlas = ExtResource("5_oiipj")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y71h"]
atlas = ExtResource("5_oiipj")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdgrn"]
atlas = ExtResource("5_oiipj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw72k"]
atlas = ExtResource("5_oiipj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yydlb"]
atlas = ExtResource("5_oiipj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp0ph"]
atlas = ExtResource("5_oiipj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwu3"]
atlas = ExtResource("5_oiipj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nekkx"]
atlas = ExtResource("5_oiipj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn4tw"]
atlas = ExtResource("5_oiipj")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abfjc"]
atlas = ExtResource("5_oiipj")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s82eo"]
atlas = ExtResource("5_l5gh2")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_utaer"]
atlas = ExtResource("5_l5gh2")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7umui"]
atlas = ExtResource("5_l5gh2")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r12qf"]
atlas = ExtResource("5_l5gh2")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce7ea"]
atlas = ExtResource("5_l5gh2")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfrtc"]
atlas = ExtResource("5_l5gh2")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oxmy"]
atlas = ExtResource("6_sy425")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mmoy"]
atlas = ExtResource("6_sy425")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8x76"]
atlas = ExtResource("7_ssvyy")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar0ul"]
atlas = ExtResource("7_ssvyy")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxfsr"]
atlas = ExtResource("7_ssvyy")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5psr1"]
atlas = ExtResource("7_ssvyy")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yprm6"]
atlas = ExtResource("8_mgegm")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwjr8"]
atlas = ExtResource("8_mgegm")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yafk6"]
atlas = ExtResource("8_mgegm")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cwqb"]
atlas = ExtResource("8_mgegm")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oy0h"]
atlas = ExtResource("8_k7ain")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfk51"]
atlas = ExtResource("8_k7ain")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1jkc"]
atlas = ExtResource("8_k7ain")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uij1b"]
atlas = ExtResource("8_k7ain")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uomj7"]
atlas = ExtResource("8_k7ain")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyuqy"]
atlas = ExtResource("8_k7ain")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4gwr"]
atlas = ExtResource("8_k7ain")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkov3"]
atlas = ExtResource("8_k7ain")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsnj0"]
atlas = ExtResource("6_sy425")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g660"]
atlas = ExtResource("6_sy425")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y2j5"]
atlas = ExtResource("9_x1bnw")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjx0"]
atlas = ExtResource("9_x1bnw")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s1n"]
atlas = ExtResource("9_x1bnw")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojl38"]
atlas = ExtResource("9_x1bnw")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_adtcq"]
atlas = ExtResource("9_x1bnw")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_awgw0"]
atlas = ExtResource("9_x1bnw")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jg40"]
atlas = ExtResource("9_x1bnw")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb54u"]
atlas = ExtResource("9_x1bnw")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_iuvr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbpmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uag31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1ktv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4fts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogh1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv7p6")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwt37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u7ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_737iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x378j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0idup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgmur")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dexmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5trbe")
}],
"loop": true,
"name": &"bat_form",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_028h3")
}],
"loop": false,
"name": &"cat_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy0qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awo54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqenh")
}],
"loop": true,
"name": &"cat_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esyku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y71h")
}],
"loop": false,
"name": &"cat_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdgrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw72k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yydlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp0ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nekkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn4tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abfjc")
}],
"loop": true,
"name": &"cat_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s82eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utaer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7umui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r12qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce7ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfrtc")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oxmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mmoy")
}],
"loop": false,
"name": &"double_jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8x76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar0ul")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxfsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5psr1")
}],
"loop": true,
"name": &"final_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yprm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwjr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yafk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cwqb")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oy0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfk51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1jkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uij1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uomj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyuqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4gwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkov3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsnj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g660")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y2j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojl38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adtcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awgw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jg40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb54u")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l40kt"]
resource_local_to_scene = true
radius = 7.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kb08a"]
resource_local_to_scene = true
radius = 11.0
height = 44.0

[sub_resource type="LabelSettings" id="LabelSettings_myapc"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hdl0"]
bg_color = Color(0.180392, 0.0117647, 0.0156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1avp"]
bg_color = Color(1, 0.0901961, 0.0901961, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yus5o"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_44ifo"]
bg_color = Color(0.0901961, 0.00392157, 0.439216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02ikt"]
bg_color = Color(0.0705882, 0, 1, 1)

[node name="player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_spune")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 22)
frames = SubResource("SpriteFrames_iuvr3")
animation = &"attack1"
playing = true
offset = Vector2(0, -22)

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("11_irdsx")
is_enemy = false

[node name="shape" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CapsuleShape2D_l40kt")
debug_color = Color(0.960784, 0, 0.509804, 0.419608)

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kb08a")

[node name="camera" type="Camera2D" parent="."]
position = Vector2(0, 22)
current = true
limit_left = 0
limit_right = 1150
limit_bottom = 500
limit_smoothed = true

[node name="attack_hitboxes" type="Node2D" parent="."]

[node name="attack1" type="Area2D" parent="attack_hitboxes"]
script = ExtResource("12_1wwyk")
damage = 5
is_enemy = false

[node name="shape" type="CollisionPolygon2D" parent="attack_hitboxes/attack1"]
polygon = PackedVector2Array(-18, -43, -1, -24, 4, 18, 33, 18, 65, 10, 83, 0, 89, -11, 88, -21, 78, -32, 59, -41, 20, -48)
disabled = true

[node name="attack2" type="Area2D" parent="attack_hitboxes"]
script = ExtResource("12_1wwyk")
damage = 7
is_enemy = false

[node name="shape" type="CollisionPolygon2D" parent="attack_hitboxes/attack2"]
polygon = PackedVector2Array(-11, -17, -15, -11, -15, -4, -5, 6, 10, 12, 28, 16, 51, 16, 73, 12, 89, 3, 94, -4, 94, -12, 88, -20, 75, -27, 56, -31)
disabled = true

[node name="timers" type="Node" parent="."]

[node name="recovery_value" type="Timer" parent="timers"]
wait_time = 2.0
autostart = true

[node name="player_anim" type="AnimationPlayer" parent="."]
libraries = {
"player": ExtResource("13_0r7r0")
}

[node name="state_machine" type="Node2D" parent="."]
script = ExtResource("12_m10jh")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("11_7bvq5")

[node name="run" type="Node" parent="state_machine"]
script = ExtResource("12_av1hs")

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource("13_644fc")

[node name="double_jump" type="Node" parent="state_machine"]
script = ExtResource("14_3yvtw")

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource("15_7d756")

[node name="final_fall" type="Node" parent="state_machine"]
script = ExtResource("16_vo0hw")

[node name="attack1" type="Node" parent="state_machine"]
script = ExtResource("17_x42d2")

[node name="attack2" type="Node" parent="state_machine"]
script = ExtResource("18_eich7")

[node name="death" type="Node" parent="state_machine"]
script = ExtResource("22_48krb")

[node name="hurt" type="Node" parent="state_machine"]
script = ExtResource("23_gesux")

[node name="bat_form" type="Node" parent="state_machine"]
script = ExtResource("19_gv58d")

[node name="cat_idle" type="Node" parent="state_machine"]
script = ExtResource("28_3b24y")

[node name="cat_walk" type="Node" parent="state_machine"]
script = ExtResource("29_y8xmx")

[node name="cat_jump" type="Node" parent="state_machine"]
script = ExtResource("30_mx1dt")

[node name="cat_fall" type="Node" parent="state_machine"]
script = ExtResource("31_3t60f")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="GUI"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("19_7otby")
metadata/_edit_lock_ = true

[node name="inventory" parent="GUI/HUD" instance=ExtResource("20_uirxe")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="fps" type="Label" parent="GUI/HUD"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
theme = ExtResource("19_7otby")
text = "FPS: "
label_settings = SubResource("LabelSettings_myapc")
script = ExtResource("21_mk2i7")

[node name="vbox" type="VBoxContainer" parent="GUI/HUD"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 205.0
offset_bottom = 45.0
theme_override_constants/separation = 10

[node name="health_bar" type="ProgressBar" parent="GUI/HUD/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 6)
layout_direction = 2
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7hdl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_k1avp")
step = 0.05
value = 50.0
show_percentage = false
script = ExtResource("22_2246v")

[node name="value" type="Label" parent="GUI/HUD/vbox/health_bar"]
z_index = 2
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_yus5o")
horizontal_alignment = 1

[node name="mana_bar" type="ProgressBar" parent="GUI/HUD/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 6)
layout_direction = 2
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_44ifo")
theme_override_styles/fill = SubResource("StyleBoxFlat_02ikt")
step = 0.05
show_percentage = false
script = ExtResource("23_th253")

[node name="value" type="Label" parent="GUI/HUD/vbox/mana_bar"]
z_index = 2
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_yus5o")
horizontal_alignment = 1

[node name="selected_form" type="Label" parent="GUI/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -18.0
offset_right = 45.0
offset_bottom = -5.0
grow_vertical = 0
text = "selected form: BAT"

[connection signal="mana_changed" from="." to="GUI/HUD/vbox/mana_bar" method="_on_player_mana_changed"]
[connection signal="player_dead" from="." to="state_machine" method="_on_player_dead"]
[connection signal="player_health_changed" from="." to="GUI/HUD/vbox/health_bar" method="_on_character_health_change"]
[connection signal="player_hurt" from="." to="state_machine" method="_on_player_damaged"]
[connection signal="timeout" from="timers/recovery_value" to="." method="_on_recovery_value_timeout" binds= [1.0]]
[connection signal="timeout" from="timers/recovery_value" to="GUI/HUD/vbox/mana_bar" method="_on_recovery_value_timeout" binds= [1.0]]
[connection signal="toggled" from="GUI/HUD/inventory/Game/grid/fps" to="GUI/HUD/fps" method="_on_fps_toggled"]

[editable path="GUI/HUD/inventory"]
